# konto-ingestion

./: .gitignore  ARCHITECTURE.md  CONFIG.md  README.md  SETUP.md  check-pipeline.sh  env.example  export_gold_data.py  ingest_from_sources.py  main.py  mypy.ini  pre-commit-check.sh  pyproject.toml  settings.toml  setup.bat  setup.sh
.cursor/rules/: commits.mdc
.github/: README.md
.github/workflows/: ci.yml  format.yml  pr-validation.yml  validate-seed-data.yml
configs/: sources.csv
data/bronze/: amelding_forms_altinn.html  amelding_overview_skatteetaten.html  bokforingsforskriften_2004.html  bokforingsloven_2004.html  ingestion_metadata.json  mva_endring_2024.html  mva_forskrift_2009.html  mva_import.html  mva_law_1999.html  mva_law_2009.html  mva_lovendring_2024.html  mva_rates.html  regnskapsloven_1998.html  saft_v1_30.html  saft_v1_30_docs.html  skatteforvaltningsloven_2016.html  skatteloven_1999.html
data/gold/eval/: README.md  accounting_glossary_eval.jsonl  conversation_eval.jsonl  rule_application_eval.jsonl  tax_glossary_eval.jsonl
data/silver/: accounting_sections.json  amelding_rules.json  law_sections.json  quality_report.json  rate_table.json  saft_v1_3_nodes.json  tax_sections.json
debug/: README.md  analyze_silver_data.py  generate_html_report.py  report.html  sample_sections.json  silver_report.html  test_legal_text_cleaning.py  test_text_cleaning.py  test_visualization.py  visualize_silver.py
docs/: planning.md  week_5_6_plan.md
modules/: __init__.py  base_script.py  constants.py  data_io.py  file_operations.py  gold_templates.py  hash_utils.py  http_client.py  logger.py  schemas.py  settings.py  silver_data_quality.py  simple_validation.py  utils.py
modules/cleaners/: __init__.py  improved_text_processing.py  legal_text_cleaner.py  norwegian_text_normalizer.py  remove_navigation.py  text_normalizer.py
modules/exporters/: __init__.py  base_exporter.py  glossary_exporter.py  rule_exporter.py  synthetic_exporter.py  utils.py
modules/parsers/: amelding_parser.py  lovdata_parser.py  rates_parser.py  saft_parser.py  saft_pdf_parser.py
modules/pipeline/: __init__.py  base_pipeline.py  domain_pipelines.py  ingestion_pipeline.py  processing_pipeline.py  source_loader.py
modules/schemas/: __init__.py  legal_schemas.py  quality_schemas.py  reporting_schemas.py  tax_schemas.py
modules/seed/: __init__.py  business_rules.py  chart_of_accounts.py  validator.py
modules/validation/: __init__.py  quality_checker.py  schema_validator.py  validator.py
results/: eval_report.json  eval_test.json  tax_eval_test.json
schemas/: AmeldingRule.schema.json  BusinessRule.schema.json  ChartOfAccountsEntry.schema.json  ExampleInput.schema.json  ExampleOutput.schema.json  LawSection.schema.json  RuleAction.schema.json  RuleCondition.schema.json  RuleExample.schema.json  SpecNode.schema.json  VatRate.schema.json
scripts/: eval_glossary.py  export_gold_all.py  export_gold_glossary.py  export_gold_rules.py  export_gold_synthetic.py  export_json_schemas.py  ingest_accounting_regs.py  ingest_reporting_regs.py  ingest_tax_regs.py  process_amelding_to_silver.py  process_bronze_to_silver.py  process_rates_to_silver.py  process_saft_pdfs_to_silver.py  process_saft_to_silver.py  process_to_silver.py  validate_gold_sample.py  validate_silver.py  validate_silver_enhanced.py
tests/: run_all_tests.py  run_tests.py  test_parsers.py  test_pipeline_integration.py  test_schemas.py  test_silver_processing.py
