[project]
name = "konto-ingestion"
version = "0.1.0"
description = "Ingestion pipeline for Norwegian legal and regulatory texts data"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "requests>=2.32",
  "pydantic>=2.8",
  "python-dateutil>=2.9",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-requests>=2.32.4.20250913",
  "dynaconf>=3.2.11",
  "mypy>=1.18.2",
  "pypdf>=5.1.0",
  "pdfplumber>=0.11.7",
  "pymupdf>=1.26.4",
  "loguru>=0.7.2",
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]

[project.scripts]
konto-ingest = "ingest_from_sources:main"
validate-silver = "scripts.validate_silver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules", "scripts"]
include = ["ingest_from_sources.py", "configs/*", "data/*", "settings.toml"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
